--- a/html/index.html
+++ b/html/index.html
@@ -54,12 +54,16 @@ var degree = 3;
 	
 
 	cw = 800;  ch = 400;
-	setCanvas("canvas1", "gray");
-	drawLine(xmin,0, xmax,0, "aqua", 1);
-	drawLine(0,ymin, 0,ymax, "aqua", 1);
 
-	drawAxisGrid("" , "white", 1.0, "aqua", 0.5, 0.0, 10.0, 0.0, 1.0, 1.0, 0.1);
-
+	function clear() {
+		setCanvas("canvas1", "gray");
+		drawLine(xmin,0, xmax,0, "aqua", 1);
+		drawLine(0,ymin, 0,ymax, "aqua", 1);
+		drawAxisGrid("" , "white", 1.0, "aqua", 0.5, 0.0, 10.0, 0.0, 1.0, 1.0, 0.1);
+	}
+	
+	clear();
+	
 	/*
 	var size = 8;
 	for (i = 0; i < size; i++) {
@@ -139,7 +143,7 @@ var degree = 3;
 	
 	var pointLength = 4;
 
-	var linePointsArray = interpolateAlgo2(pointLength, degree, drawCurve);
+	var linePointsArray = interpolateAlgo2(pointLength, degree, drawCurve, clear);
 	
 	return;
 	
